--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,9 @@
-<div>
 
+<div>
+    <img src="/images/beer.png" class="card-img-top" style="width: 18rem;">
+    <a href="/beers">
+    <button type="button" class="btn btn-primary">Check the Beers!</button>
+    </a>
+    <a href="/random-beer">  <button type="button" class="btn btn-primary">Check a Random Beer!</button>
+    </a>
 </div>
